Made workspaces display icons contained in workspace in bar

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,4 +6,5 @@
     ~/.config/bspwm: .config/bspwm
     ~/.config/sxhkd: .config/sxhkd
     ~/.config/lighthouse: .config/lighthouse
+    ~/.zshrc: .zshrc
 
