Added urxvt support.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,4 +7,5 @@
     ~/.config/sxhkd: .config/sxhkd
     ~/.config/lighthouse: .config/lighthouse
     ~/.zshrc: .zshrc
+    ~/.Xresources: .Xresources
 
