Added xfce4 terminal config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,4 +9,5 @@
     ~/.config/lighthouse: .config/lighthouse
     ~/.zshrc: .zshrc
     ~/.Xresources: .Xresources
+    ~/.config/xfce4/terminal/: .config/xfce4/terminal
 
