Added compton config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,5 +9,6 @@
     ~/.config/lighthouse: .config/lighthouse
     ~/.zshrc: .zshrc
     ~/.Xresources: .Xresources
-    ~/.config/xfce4/terminal/: .config/xfce4/terminal
+    ~/.config/xfce4/terminal: ./.config/xfce4/terminal
+    ~/.config/compton: ./.config/compton
 
