--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,4 +12,5 @@
     ~/.config/xfce4/terminal: ./.config/xfce4/terminal
     ~/.config/compton: ./.config/compton
     ~/.vimperatorrc: ./.vimperatorrc
+    ~/.scripts: ./.scripts
 
