--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,4 +13,6 @@
     ~/.config/compton: ./.config/compton
     ~/.vimperatorrc: ./.vimperatorrc
     ~/.scripts: ./.scripts
+    ~/.config/fish/config.fish: ./.config/fish/config.fish
+    ~/.config/fish/functions: ./.config/fish/functions
 
