Changed zsh prompt

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,5 +1,8 @@
 "3.10.1 (created: 2015/08/25 00:41:59)
 
+map O :tabopen<Space><Space>
+map d ''
+map r ''
 set hintchars=12345
 set tabnumbers
 source! /home/frans/.vimperatorrc.local
