--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     ~/.config/tint2: .config/tint2
     ~/.config/lighthouse: .config/lighthouse
     ~/.zshrc: .zshrc
+    ~/.config/zsh: ./.config/zsh
     ~/.Xresources: .Xresources
     ~/.config/xfce4/terminal: ./.config/xfce4/terminal
     ~/.config/compton: ./.config/compton
