--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".config/zsh/zgen"]
 	path = .config/zsh/zgen
 	url = git@github.com:tarjoilija/zgen.git
+[submodule ".config/zsh/antigen"]
+	path = .config/zsh/antigen
+	url = https://github.com/zsh-users/antigen.git
