Add server to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -12,3 +12,7 @@ Host isy
     HostName ixtab.edu.isy.liu.se
     Port 22
     User frask812
+
+host server
+    HostName 192.168.1.91
+    port 2222
