Update ssh config to use ip of new laptop

--- a/.ssh/config
+++ b/.ssh/config
@@ -17,8 +17,12 @@ host server
     HostName 192.168.0.12
     port 22
 
-host laptop
+host old_laptop
     HostName 192.168.0.10
+    port 22
+
+host laptop
+    HostName 192.168.0.13
     port 22
 
 host rpi
