add password to jpn

--- a/.jupyter/jupyter_notebook_config.json
+++ b/.jupyter/jupyter_notebook_config.json
@@ -2,6 +2,7 @@
   "NotebookApp": {
     "nbserver_extensions": {
       "jupyter_nbextensions_configurator": true
-    }
+    },
+    "password": "sha1:7a2b1e8ed04a:e71b814687f462cfac0dcd4cc74ec65250177423"
   }
 }
