--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,4 +22,5 @@
     ~/.gdbinit: ./.gdbinit
     ~/.gitconfig: ./gitconfig
     ~/.jupyter: ./.jupyter
+    ~/.gitignore_global: ./.gitignore_global
 
