--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/anishathalye/dotbot.git
 [submodule ".config/zsh/zgen"]
 	path = .config/zsh/zgen
-	url = git@github.com:tarjoilija/zgen.git
+	url = https://github.com/tarjoilija/zgen.git
 [submodule ".config/zsh/antigen"]
 	path = .config/zsh/antigen
 	url = https://github.com/zsh-users/antigen.git
