--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.config/zsh: ./.config/zsh
     ~/.Xresources: .Xresources
     ~/.config/xfce4/terminal: ./.config/xfce4/terminal
+    ~/.config/kitty/kitty.conf: ./.config/kitty/kitty.conf
     ~/.config/compton: ./.config/compton
     ~/.vimperatorrc: ./.vimperatorrc
     ~/.scripts: ./.scripts
@@ -23,4 +24,5 @@
     ~/.gitconfig: ./gitconfig
     ~/.jupyter: ./.jupyter
     ~/.gitignore_global: ./.gitignore_global
+    ~/.local/share/konsole: .local/share/konsole
 
