--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,8 +3,7 @@
 - link:
     ~/.vim: .vim/
     ~/.vimrc: .vimrc
-    ~/.config/nvim: .vim/
-    ~/.config/nvim/init.vim: .vimrc/
+    ~/.config/nvim/init.vim: .vimrc
     ~/.config/bspwm: .config/bspwm
     ~/.config/sxhkd: .config/sxhkd
     ~/.config/tint2: .config/tint2
