Change terminal emulator to kitty

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,4 +24,5 @@
     ~/.jupyter: ./.jupyter
     ~/.gitignore_global: ./.gitignore_global
     ~/.local/share/konsole: .local/share/konsole
+    ~/.config/kitty: .config/kitty
 
