Change ssh url of ida to parlomba

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,7 +4,7 @@ Host home
     User frans
 
 Host ida
-    HostName remote-und.ida.liu.se
+    HostName parlomba2.ida.liu.se
     Port 22
     User frask812
 
