--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,20 +1,23 @@
-include colors_blue
+include colors
 
-env IS_KITTY=1
+env ISKITTY=yes
 
 font_family      Hasklug Semibold Nerd Font Complete Mono
-bold_font        auto
+bold_font        Hasklug Bold Nerd Font Complete Mono
 italic_font      auto
 bold_italic_font auto
+font_size 12.0
 
 scrollback_lines 2000
 
 open_url_modifiers ctrl
 
-background #0b151d
 allow_remote_control yes
 
 cursor_text_color background
 
-
 map kitty_mod+n new_os_window_with_cwd
+
+map ctrl+shift+k scroll_line_up
+map ctrl+shift+j scroll_line_down
+
