--- a/.ssh/config
+++ b/.ssh/config
@@ -41,3 +41,8 @@ host mai
 	HostName lien.edu.mai.liu.se
     User frask812
 	port 22
+
+host liu
+    HostName 130.236.64.50
+    User frask812
+    port 22
