Remove generated alacritty configs

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .config/xfce4/terminal/terminalrc
 .config/xfce4/terminal/accels.scm
 .config/alacritty/alacritty.yml
+.config/alacritty/dark.yml
+.config/alacritty/light.yml
 
 # Konsole unused files
 .local/share/konsole/bookmarks.xml*
