Add dim colours

--- a/.config/alacritty/dark_color.yml
+++ b/.config/alacritty/dark_color.yml
@@ -55,15 +55,15 @@ colors:
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  #dim:
-  #  black:   '0x000000'
-  #  red:     '0x8c3336'
-  #  green:   '0x7a8530'
-  #  yellow:  '0x97822e'
-  #  blue:    '0x506d8f'
-  #  magenta: '0x80638e'
-  #  cyan:    '0x497e7a'
-  #  white:   '0x9a9a9a'
+  dim:
+    black:   '0x181818'
+    red:     '0x650000'
+    green:   '0x006500'
+    yellow:  '0x655e00'
+    blue:    '0x000065'
+    magenta: '0x650065'
+    cyan:    '0x006565'
+    white:   '0x656565'
 
   # Indexed Colors
   #
