--- a/.config/alacritty/main_config.yml
+++ b/.config/alacritty/main_config.yml
@@ -118,10 +118,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: "Hasklig"
+    family: "Hasklig Semibold"
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   bold:
@@ -129,10 +129,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    style: Bold
+    family: "Hasklig Black"
 
   # Italic font face
   #italic:
@@ -146,7 +143,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 7.0
+  size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
