--- a/.config/alacritty/main_config.yml
+++ b/.config/alacritty/main_config.yml
@@ -118,10 +118,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: "Hasklig Semibold"
+    family: "Hasklig"
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
 
   # Bold font face
   bold:
@@ -129,7 +129,9 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Hasklig Black"
+    family: "Hasklig"
+
+    style: "Black,Regular"
 
   # Italic font face
   #italic:
