Change terminal font and add right click to copy to alacritty

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,7 +8,7 @@ Host ida
     Port 22
     User frask812
 
-Host isy
+Host ixtab
     HostName ixtab.edu.isy.liu.se
     Port 22
     User frask812
@@ -42,7 +42,31 @@ host mai
     User frask812
 	port 22
 
-host liu
+host liuedu
+    HostName 130.236.64.50
+    User frask53
+    port 22
+
+host liustud
     HostName 130.236.64.50
     User frask812
     port 22
+
+host liu
+    HostName jala.ad.liu.se
+    User frask53
+    port 22
+
+
+host office
+    HostName lnx00134.ad.liu.se
+    user frask53
+
+
+host mux
+    user frask53
+    HostName muxen1-004.ad.liu.se
+
+
+host gitlab.liu.se
+    Identityfile /home/frans/.ssh/id_rsa_2
