Update home ssh ip

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,5 @@
 Host home
-    HostName 46.59.41.53
+    HostName 62.63.215.37
     Port 2222
     User frans
 
@@ -56,6 +56,8 @@ host liu
     HostName jala.ad.liu.se
     User frask53
     port 22
+    Compression yes
+    ForwardX11 yes
 
 
 host office
@@ -67,6 +69,3 @@ host mux
     user frask53
     HostName muxen1-004.ad.liu.se
 
-
-host gitlab.liu.se
-    Identityfile /home/frans/.ssh/id_rsa_2
